
WIP      [MANUALS] When displaying manuals use cached extracted images if they exist.

WIP      [MANUALS] Progress bar when extracting PDF pages.

WIP      [MANUALS] Support for CBZ/CBR manuals.
         Wait until this is implemented in AEL and then port it from AEL into AML?


[B]Advanced MAME Launcher | version 0.9.8 | 11 June 2018[/B]

FEATURE  Documentation in README.md improved.

FIX      Changed source code files to remove BOM. This is necessary to pass Travis tests of
         Kodi official repo.


[B]Advanced MAME Launcher | version 0.9.7 | 09 June 2018[/B]

FEATURE  Implemented settings "display_rom_available" and "display_chd_available".

FEATURE  [LAUNCH] Implement "Action on Kodi playing media", "After/before launch delay (ms)", and
         "Suspend/resume Kodi audio engine".
         See https://github.com/Wintermute0110/plugin.program.AML/issues/3

FEATURE  [MAME FILTERING] Improve the Custom Filters (add more filtering options as defined
         in the reference filter file `AML-MAME-filters-reference.xml`).

FEATURE  [CORE] Render the `In Favourites` flag for MAME machines.

FEATURE  [CORE] Optimize the rendering of ROMs in 3 steps: a) Loading, b) Processing and c) Rendering.
         Processing computes all data to render ROMs and Rendering calls Kodi functions. This will
         allow to measure how long does it take to call the Kodi functions for ListItem generation.

FEATURE  [CORE] Reduce the memory consumption during the database generation.
         By default use the options OPTION_COMPACT_JSON = True and OPTION_LOWMEM_WRITE_JSON = True
         See https://stackoverflow.com/questions/24239613/memoryerror-using-json-dumps

FIX      Fix crash when executing "Check/Update all objects" if Favourites are empty.


[B]Advanced MAME Launcher | version 0.9.6 | 25 May 2018[/B]

FEATURE  Improve the user experience when the addon is just installed. Check if databases
         have been built, check for errors, etc.
